# MEPhI_2sem_lab1

./: CMakeLists.txt  Menu.h  array.c  array.h  fieldinfo.c  fieldinfo.h  float.c  float.h  func.c  func.h  main.c  number.c  number.h  tests.c  tests.h
